--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -5,29 +5,75 @@
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="{% block meta_keywords %}{% trans "METAKEYWORDS" %}{% endblock %}">
-    <meta name="description" content="{% block meta_description %}{% trans "METADESCRIPTION" %}{% endblock %}">
+    <meta name="keywords" content="{% block meta_keywords %}{% endblock %}">
+    <meta name="description" content="{% block meta_description %}{% endblock %}">
     <meta name="format-detection" content="telephone=no">
-    <meta name="msvalidate.01" content="5CBA4E854FB23E9C654FEB9B999BFFB2" />
-    <title>{% block title %}{% trans "PAGETITLE" %}{% endblock %}</title>
+    <meta name="msvalidate.01" content="5CBA4E854FB23E9C654FEB9B999BFFB2"/>
+    <title>{% block title %}AlgoTrading{% endblock %}</title>
     <link rel="search" type="application/opensearchdescription+xml" href="/opensearch_v2.xml" title="">
-    <link rel="stylesheet" href="{% static "bootstrap/css/bootstrap.min.css" %}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static "style.css" %}">
     {% block extra_head %}{% endblock %}
 </head>
 <body class="{% block body_class %}{% endblock %} {{ lang }}">
 
-<div class="container">
-    {% block body %}
-    {% endblock %}
-</div>
 
-{% block extra_body_base %}
-    {% block extra_body %}{% endblock %}
-{% endblock %}
+<header>
+    <!-- Fixed navbar -->
+    <nav class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Trade</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
+                    aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                    <li class="nav-item active">
+                        <a class="nav-link" aria-current="page" href="#">Home</a>
+                    </li>
+                    {#          <li class="nav-item">#}
+                    {#            <a class="nav-link" href="#">Link</a>#}
+                    {#          </li>#}
+                    {#          <li class="nav-item">#}
+                    {#            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>#}
+                    {#          </li>#}
+                </ul>
+                <form class="d-flex">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+            </div>
+        </div>
+    </nav>
+</header>
+
+<!-- Begin page content -->
+<main class="flex-shrink-0">
+    <div class="container">
+        <div class="container">
+            {% block body %}
+                <h1 class="mt-5">Sticky footer with fixed navbar</h1>
+                <p class="lead">Pin a footer to the bottom of the viewport in desktop browsers with this custom HTML and
+                    CSS. A fixed navbar has been added with <code class="small">padding-top: 60px;</code> on the <code
+                            class="small">main &gt; .container</code>.</p>
+                <p>Back to <a href="/docs/5.0/examples/sticky-footer/">the default sticky footer</a> minus the navbar.
+                </p>
+            {% endblock %}
+        </div>
+    </div>
+</main>
+
+{#<footer class="footer mt-auto py-3 bg-light">#}
+{#    <div class="container">#}
+{#        <span class="text-muted">Place sticky footer content here.</span>#}
+{#    </div>#}
+{#</footer>#}
 
 <link rel="shortcut icon" href="favicon.png"/>
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+        crossorigin="anonymous"></script>
 </body>
 </html>
