--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -10,7 +10,7 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="msvalidate.01" content="5CBA4E854FB23E9C654FEB9B999BFFB2"/>
     <title>{% block title %}AlgoTrading{% endblock %}</title>
-    <link rel="search" type="application/opensearchdescription+xml" href="/opensearch_v2.xml" title="">
+{#    <link rel="search" type="application/opensearchdescription+xml" href="/opensearch_v2.xml" title="">#}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static "style.css" %}">
