--- a/app/templates/status.html
+++ b/app/templates/status.html
@@ -93,7 +93,18 @@
                         {% for stock in item.obj.portfolio.open_stocks %}
                             <tr>
                                 <th scope="row">{{ stock.id }}</th>
-                                <td>{{ stock.stock_ticker }}</td>
+                                <td>
+                                    {{ stock.stock_ticker }}
+                                    <a href="https://finance.yahoo.com/quote/{{ stock.stock_name }}">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                             fill="currentColor" class="bi bi-info-circle" viewBox="0 0 16 16">
+                                            <path fill-rule="evenodd"
+                                                  d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                                            <path d="M8.93 6.588l-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588z"/>
+                                            <circle cx="8" cy="4.5" r="1"/>
+                                        </svg>
+                                    </a>
+                                </td>
                                 <td>{{ stock.price |floatformat }}</td>
                                 <td>{{ stock.purchase_at }}</td>
                                 <td>{{ stock.live.last_price |floatformat }}$</td>
@@ -136,8 +147,7 @@
                                 <th scope="row">{{ stock.id }}</th>
                                 <td>
                                     {{ stock.stock_name }}
-                                    <a
-                                            href="https://finance.yahoo.com/quote/{{ stock.stock_name }}">
+                                    <a href="https://finance.yahoo.com/quote/{{ stock.stock_name }}">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                              fill="currentColor" class="bi bi-info-circle" viewBox="0 0 16 16">
                                             <path fill-rule="evenodd"
