--- a/app/templates/status.html
+++ b/app/templates/status.html
@@ -95,7 +95,7 @@
                                 <th scope="row">{{ stock.id }}</th>
                                 <td>
                                     {{ stock.stock_ticker }}
-                                    <a href="https://finance.yahoo.com/quote/{{ stock.stock_name }}">
+                                    <a href="https://finance.yahoo.com/quote/{{ stock.stock_ticker }}">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                              fill="currentColor" class="bi bi-info-circle" viewBox="0 0 16 16">
                                             <path fill-rule="evenodd"
