--- a/app/templates/status.html
+++ b/app/templates/status.html
@@ -1,188 +1,192 @@
 {% extends "layout.html" %}
+{% load app_extra %}
+
 {% block body %}
-<div class="row mt-5">
-    <div class="col-sm-3">
-        <h1 class="float-start">
-            Status Page
-        </h1>
+    <div class="row mt-5">
+        <div class="col-sm-3">
+            <h1 class="float-start">
+                Status Page
+            </h1>
 
-        {% if runner.running %}
-            <span class="align-middle badge rounded-pill bg-success pull-right">Running</span>
-        {% else %}
-            <span class="align-middle badge rounded-pill bg-danger pull-right">Stop</span>
-        {% endif %}
-    </div>
+            {% if runner.running %}
+                <span class="align-middle badge rounded-pill bg-success pull-right">Running</span>
+            {% else %}
+                <span class="align-middle badge rounded-pill bg-danger pull-right">Stop</span>
+            {% endif %}
+        </div>
 
-</div>
-<div class="row mt-5">
-    <div class="row">
-        <h2>Currently Running Strategies</h2>
-        <p>Currently Strategies that are loaded into the system.</p>
     </div>
-    <div class="row">
-        {% if strategies.values %}
-            <table class="table table-hover">
-                <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Name</th>
-                    <th scope="col">Description</th>
-                    <th scope="col">Start At</th>
-                    <th scope="col">Profit</th>
-                    <th scope="col">Open Stocks</th>
-                    <th scope="col">Script</th>
-                    <th scope="col">status</th>
-                </tr>
-                </thead>
-                <tbody>
-                {% for item in strategies.values %}
-                    <tr>
-                        <th scope="row">{{ item.obj.id }}</th>
-                        <td>{{ item.obj.name }}</td>
-                        <td>{{ item.obj.description }}</td>
-                        <td>{{ item.obj.start_at }}</td>
-                        <td>{{ item.obj.portfolio.total_profit |floatformat }}$</td>
-                        <td>{{ item.obj.portfolio.stock_open_len }}</td>
-                        <td>{{ item.obj.python_model }}</td>
-                        <td>
-                            {% if item.obj.is_disabled %}
-                                <span class="badge rounded-pill bg-danger pull-right">Stop</span>
-                            {% else %}
-                                <span class="badge rounded-pill bg-success pull-right">Running</span>
-                            {% endif %}
-                        </td>
-                    </tr>
-                {% endfor %}
-                </tbody>
-            </table>
-        {% else %}
-            <div class="bd-callout bd-callout-danger">
-                <strong>No strategies are running.</strong> <a href="/start">Start it now.</a>
-            </div>
-        {% endif %}
-    </div>
-</div>
-
-<div class="row mt-5">
-    <div class="row">
-        <h2 data-bs-toggle="tooltip" data-bs-placement="top" title="Tooltip on top" class="popover-mark">Stocks in
-            Portfolio</h2>
-        <p>
-            Stocks that the strategy already bought, and didn't sell yet.
-        </p>
-    </div>
-    <div class="row">
-        {% for item in strategies.values %}
-            <div class="bd-callout bd-callout-info">
-                <h4 class="" style="">{{ item.obj.name }}</h4>
-                <p>
-                    {{ item.obj.description }}
-                </p>
+    <div class="row mt-5">
+        <div class="row">
+            <h2>Currently Running Strategies</h2>
+            <p>Currently Strategies that are loaded into the system.</p>
+        </div>
+        <div class="row">
+            {% if strategies.values %}
                 <table class="table table-hover">
                     <thead>
                     <tr>
                         <th scope="col">#</th>
-                        <th scope="col">Stock Ticker</th>
-                        <th scope="col">Buy Price</th>
-                        <th scope="col">Buy Date</th>
-                        <th scope="col">Current Price</th>
-
+                        <th scope="col">Name</th>
+                        <th scope="col">Description</th>
+                        <th scope="col">Start At</th>
+                        <th scope="col">Profit</th>
+                        <th scope="col">Open Stocks</th>
+                        <th scope="col">Script</th>
+                        <th scope="col">status</th>
                     </tr>
                     </thead>
                     <tbody>
-                    {% for stock in item.obj.portfolio.open_stocks %}
+                    {% for item in strategies.values %}
                         <tr>
-                            <th scope="row">{{ stock.id }}</th>
+                            <th scope="row">{{ item.obj.id }}</th>
+                            <td>{{ item.obj.name }}</td>
+                            <td>{{ item.obj.description }}</td>
+                            <td>{{ item.obj.start_at }}</td>
+                            <td>{{ item.obj.portfolio.total_profit |floatformat }}$</td>
+                            <td>{{ item.obj.portfolio.stock_open_len }}</td>
+                            <td>{{ item.obj.python_model }}</td>
                             <td>
-                                {{ stock.stock_ticker }}
-                                <a href="https://finance.yahoo.com/quote/{{ stock.stock_ticker }}/" target="_blank">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                                         fill="currentColor" class="bi bi-info-circle" viewBox="0 0 16 16">
-                                        <path fill-rule="evenodd"
-                                              d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                                        <path d="M8.93 6.588l-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588z"/>
-                                        <circle cx="8" cy="4.5" r="1"/>
-                                    </svg>
-                                </a>
+                                {% if item.obj.is_disabled %}
+                                    <span class="badge rounded-pill bg-danger pull-right">Stop</span>
+                                {% else %}
+                                    <span class="badge rounded-pill bg-success pull-right">Running</span>
+                                {% endif %}
                             </td>
-                            <td>{{ stock.price |floatformat }}</td>
-                            <td>{{ stock.purchase_at }}</td>
-                            <td>{{ stock.live.last_price |floatformat }}$</td>
                         </tr>
                     {% endfor %}
                     </tbody>
                 </table>
-            </div>
-        {% endfor %}
-    </div>
-</div>
-
-<div class="row mt-5">
-    <div class="row">
-        <h2>Stocks in Watch for buying</h2>
-        <p>
-            Stocks in watch, which means they pass the first threshold, and we are waiting for signal to buy.
-        </p>
-    </div>
-    <div class="row">
-        {% for item in strategies.values %}
-        <div class="bd-callout bd-callout-info">
-            <h4 class="" style="">{{ item.obj.name }}</h4>
-            <p>
-                {{ item.obj.description }}
-            </p>
-            <table class="table table-hover">
-                <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Stock Ticker</th>
-                    <th scope="col">Current Price</th>
-                    <th scope="col">Last Prices</th>
-                </tr>
-                </thead>
-                <tbody>
-                {% for stock in item.thread.stock_to_watch %}
-                <tr>
-                    <th scope="row">{{ stock.id }}</th>
-                    <td>
-                        {{ stock.stock_name }}
-                        <a href="https://finance.yahoo.com/quote/{{ stock.stock_name }}" target="_blank">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                                 fill="currentColor" class="bi bi-info-circle" viewBox="0 0 16 16">
-                                <path fill-rule="evenodd"
-                                      d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                                <path d="M8.93 6.588l-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588z"/>
-                                <circle cx="8" cy="4.5" r="1"/>
-                            </svg>
-                        </a>
-                    </td>
-                    <td>{{ stock.last_price | floatformat }}</td>
-                    <td>
-{#                        {% for h_price in item.thread.stock_watcher[stock_name] %}#}
-{#                        {{ h_price }}#}
-{#                        {% endofor %}#}
-                    </td>
-                    <td></td>
-                </tr>
-                {% endfor %}
-                </tbody>
-            </table>
+            {% else %}
+                <div class="bd-callout bd-callout-danger">
+                    <strong>No strategies are running.</strong> <a href="/start">Start it now.</a>
+                </div>
+            {% endif %}
         </div>
-        {% endfor %}
     </div>
-</div>
+
+    <div class="row mt-5">
+        <div class="row">
+            <h2 data-bs-toggle="tooltip" data-bs-placement="top" title="Tooltip on top" class="popover-mark">Stocks in
+                Portfolio</h2>
+            <p>
+                Stocks that the strategy already bought, and didn't sell yet.
+            </p>
+        </div>
+        <div class="row">
+            {% for item in strategies.values %}
+                <div class="bd-callout bd-callout-info">
+                    <h4 class="" style="">{{ item.obj.name }}</h4>
+                    <p>
+                        {{ item.obj.description }}
+                    </p>
+                    <table class="table table-hover">
+                        <thead>
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">Stock Ticker</th>
+                            <th scope="col">Buy Price</th>
+                            <th scope="col">Buy Date</th>
+                            <th scope="col">Current Price</th>
+
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for stock in item.obj.portfolio.open_stocks %}
+                            <tr>
+                                <th scope="row">{{ stock.id }}</th>
+                                <td>
+                                    {{ stock.stock_ticker }}
+                                    <a href="https://finance.yahoo.com/quote/{{ stock.stock_ticker }}/" target="_blank">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                             fill="currentColor" class="bi bi-info-circle" viewBox="0 0 16 16">
+                                            <path fill-rule="evenodd"
+                                                  d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                                            <path d="M8.93 6.588l-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588z"/>
+                                            <circle cx="8" cy="4.5" r="1"/>
+                                        </svg>
+                                    </a>
+                                </td>
+                                <td>{{ stock.price |floatformat }}</td>
+                                <td>{{ stock.purchase_at }}</td>
+                                <td>{{ stock.live.last_price |floatformat }}$</td>
+                                <td>{% percentage_change stock.price stock.live.last_price %}$</td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            {% endfor %}
+        </div>
+    </div>
+
+    <div class="row mt-5">
+        <div class="row">
+            <h2>Stocks in Watch for buying</h2>
+            <p>
+                Stocks in watch, which means they pass the first threshold, and we are waiting for signal to buy.
+            </p>
+        </div>
+        <div class="row">
+            {% for item in strategies.values %}
+                <div class="bd-callout bd-callout-info">
+                    <h4 class="" style="">{{ item.obj.name }}</h4>
+                    <p>
+                        {{ item.obj.description }}
+                    </p>
+                    <table class="table table-hover">
+                        <thead>
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">Stock Ticker</th>
+                            <th scope="col">Current Price</th>
+                            <th scope="col">Last Prices</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for stock in item.thread.stock_to_watch %}
+                            <tr>
+                                <th scope="row">{{ stock.id }}</th>
+                                <td>
+                                    {{ stock.stock_name }}
+                                    <a href="https://finance.yahoo.com/quote/{{ stock.stock_name }}" target="_blank">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                             fill="currentColor" class="bi bi-info-circle" viewBox="0 0 16 16">
+                                            <path fill-rule="evenodd"
+                                                  d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                                            <path d="M8.93 6.588l-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588z"/>
+                                            <circle cx="8" cy="4.5" r="1"/>
+                                        </svg>
+                                    </a>
+                                </td>
+                                <td>{{ stock.last_price | floatformat }}</td>
+
+                                <td>
+                                    {#                        {% for h_price in item.thread.stock_watcher[stock_name] %}#}
+                                    {#                        {{ h_price }}#}
+                                    {#                        {% endofor %}#}
+                                </td>
+                                <td></td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            {% endfor %}
+        </div>
+    </div>
 
 
-<script type="text/javascript">
-    document.addEventListener("DOMContentLoaded", function (event) {
-        var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
-        var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
-            return new bootstrap.Tooltip(tooltipTriggerEl)
-        })
+    <script type="text/javascript">
+        document.addEventListener("DOMContentLoaded", function (event) {
+            var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
+            var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+                return new bootstrap.Tooltip(tooltipTriggerEl)
+            })
 
-        setTimeout(function () {
-            window.location.reload(1);
-        }, 30000);
-    });
-</script>
+            setTimeout(function () {
+                window.location.reload(1);
+            }, 30000);
+        });
+    </script>
 {% endblock %}
