Fixing - Buy/sell after too small interval

--- a/app/templates/status.html
+++ b/app/templates/status.html
@@ -145,10 +145,14 @@
         <div class="row">
             {% for item in strategies.values %}
                 <div class="bd-callout bd-callout-info">
-                    <h4 class="" style="">{{ item.obj.name }}</h4>
+                    <h4 class="" style="">
+                        {{ item.obj.name }}
+                        <span class="badge bg-info text-dark pull-right"> Last run {{ item.thread.last_time_find_criteria }}</span>
+                    </h4>
                     <p>
                         {{ item.obj.description }}
                     </p>
+
                     <div class="table-responsive">
                         <table class="table table-hover">
                             <thead>
@@ -272,10 +276,10 @@
 
     <script type="text/javascript">
         document.addEventListener("DOMContentLoaded", function (event) {
-            var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
+            var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'));
             var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
-                return new bootstrap.Tooltip(tooltipTriggerEl)
-            })
+                return new bootstrap.Tooltip(tooltipTriggerEl);
+            });
 
             setTimeout(function () {
                 window.location.reload(1);
