--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -21,9 +21,10 @@
 
 <header>
     <!-- Fixed navbar -->
-    <nav class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+    <nav class="d-flex fixed-top flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Trade</a>
+            <span>{% now "SHORT_DATETIME_FORMAT" %}</span>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                     aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -50,7 +51,7 @@
 </header>
 
 <!-- Begin page content -->
-<main class="flex-shrink-0">
+<main class="flex-shrink-0 mt-10" style="margin-top: 80px;">
     <div class="container">
         <div class="container">
             {% block body %}
