Update to ruseel

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -24,7 +24,7 @@
     <nav class="d-flex fixed-top flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Trade</a>
-            <span>{% now "SHORT_DATETIME_FORMAT" %}</span>
+            <span>{% now "DATETIME_FORMAT" %}</span>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                     aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
